@@ -6,6 +6,7 @@ libgigeditgfx_la_SOURCES = \
 	builtinpix.cpp builtinpix.h \
 	black_loop.c \
 	blue_hatched_pattern.c \
+	grayblue_hatched_pattern.c \
 	gray_loop.c \
 	red_dot.c \
 	yellow_dot.c
