@@ -1,0 +1,50 @@
+/* GdkPixbuf RGBA C-Source image dump */
+
+#ifdef __SUNPRO_C
+#pragma align 4 (grayblue_hatched_pattern_rgba)
+#endif
+#ifdef __GNUC__
+const unsigned char grayblue_hatched_pattern_rgba[] __attribute__ ((__aligned__ (4))) =
+#else
+const unsigned char grayblue_hatched_pattern_rgba[] =
+#endif
+{ ""
+  /* Pixbuf magic (0x47646b50) */
+  "GdkP"
+  /* length: header (24) + pixel_data (400) */
+  "\0\0\1\250"
+  /* pixdata_type (0x1010002) */
+  "\1\1\0\2"
+  /* rowstride (40) */
+  "\0\0\0("
+  /* width (10) */
+  "\0\0\0\12"
+  /* height (10) */
+  "\0\0\0\12"
+  /* pixel_data: */
+  "\337\337\337\377\337\337\337\377\337\337\337\377\364\364\364\377\377"
+  "\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377"
+  "\377\377\360\360\360\377\337\337\337\377\337\337\337\377\364\364\364"
+  "\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377"
+  "\377\377\377\377\360\360\360\377\337\337\337\377\337\337\337\377\364"
+  "\364\364\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377"
+  "\377\377\377\377\377\377\360\360\360\377\337\337\337\377\337\337\337"
+  "\377\364\364\364\377\377\377\377\377\377\377\377\377\377\377\377\377"
+  "\377\377\377\377\377\377\377\377\357\357\357\377\337\337\337\377\337"
+  "\337\337\377\337\337\337\377\377\377\377\377\377\377\377\377\377\377"
+  "\377\377\377\377\377\377\377\377\377\377\360\360\360\377\337\337\337"
+  "\377\337\337\337\377\337\337\337\377\363\363\363\377\377\377\377\377"
+  "\377\377\377\377\377\377\377\377\377\377\377\377\360\360\360\377\337"
+  "\337\337\377\337\337\337\377\337\337\337\377\363\363\363\377\377\377"
+  "\377\377\377\377\377\377\377\377\377\377\377\377\377\377\360\360\360"
+  "\377\337\337\337\377\337\337\337\377\337\337\337\377\363\363\363\377"
+  "\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\360"
+  "\360\360\377\337\337\337\377\337\337\337\377\337\337\337\377\363\363"
+  "\363\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377"
+  "\377\360\360\360\377\337\337\337\377\337\337\337\377\337\337\337\377"
+  "\363\363\363\377\377\377\377\377\377\377\377\377\377\377\377\377\377"
+  "\377\377\377\360\360\360\377\337\337\337\377\337\337\337\377\337\337"
+  "\337\377\363\363\363\377\377\377\377\377\377\377\377\377\377\377\377"
+  "\377\377\377\377\377\377\377\377\377"};
+
+const int grayblue_hatched_pattern_rgba_size = sizeof(grayblue_hatched_pattern_rgba);
