@@ -74,6 +74,8 @@ Version SVN HEAD (?)
   * Implemented selecting multiple dimension region zones by keyboard with
     keyboard accelerators Alt+Shift+Left and Alt+Shift+Right.
   * Implemented copy & paste of DimensionRegion (with Alt+c and Alt+v).
+  * Dimension Region Chooser: Mark all zones auto selected by check box trio
+    with gray hatched pattern.
 
 Version 1.0.0 (2015-07-17)
 
